fix the hamburger menu on mobile devices

--- a/app/stylesheets/theme.css
+++ b/app/stylesheets/theme.css
@@ -451,8 +451,9 @@ a:focus {
   }
 }
 @media (max-width: 767px) {
-  .sidebar-open .main-sidebar,
-  .sidebar-open .left-side {
+  /* fix the left sidebar on mobile devices */
+  .sidebar-collapse .main-sidebar,
+  .sidebar-collapse .left-side {
     -webkit-transform: translate(0, 0);
     -ms-transform: translate(0, 0);
     -o-transform: translate(0, 0);
